--- a/ManageGo/Views/TenantsPage.xaml
+++ b/ManageGo/Views/TenantsPage.xaml
@@ -41,9 +41,13 @@
             <StackLayout Spacing="0" Grid.Row="1" BackgroundColor="White">
                 <Label  Text="Tenants" TextColor="{StaticResource Grey-Dark-1}" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Medium" HorizontalTextAlignment="Center"/>
                 <BoxView HeightRequest="1" BackgroundColor="#85bafa"/>
-                <StackLayout HorizontalOptions="CenterAndExpand" Spacing="0" Orientation="Horizontal">
-                    <Button Text="Filter" ContentLayout="Left,4"  HorizontalOptions="CenterAndExpand" BackgroundColor="Transparent" VerticalOptions="CenterAndExpand" Command="{Binding OnFilterTapped}" TextColor="Black" Image="filter_blue.png"  />
-                    <Label Text="{Binding NumberOfAppliedFilters}" HorizontalOptions="StartAndExpand" FontSize="Small" Margin="-3,8,0,0" TextColor="#318bfa"/>
+                <StackLayout Spacing="4" Padding="12" HeightRequest="25" HorizontalOptions="CenterAndExpand" Orientation="Horizontal">
+                    <Image Source="filter_blue.png" />
+                    <Label Text="Filter" FontSize="Medium" TextColor="{StaticResource Grey-Mid-1}" VerticalOptions="CenterAndExpand" FontAttributes="Bold"/>
+                    <Label Text="{Binding NumberOfAppliedFilters}" FontSize="Small" Margin="0,-3,0,0" TextColor="#318bfa"/>
+                    <StackLayout.GestureRecognizers>
+                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnFilterTapped}" />
+                    </StackLayout.GestureRecognizers>
                 </StackLayout>
                 <BoxView BackgroundColor="#f7f9fa" HeightRequest="2"/>
                 <BoxView BackgroundColor="#ebebeb" HeightRequest="1"/>
@@ -77,7 +81,7 @@
                                                     <Image  Source="chevron_down.png" Rotation="0" IsVisible="{Binding DetailsShown, Converter={StaticResource InverseBoolConverter} }" VerticalOptions="Start" HorizontalOptions="End"/>
                                                     <Image  Source="chevron_down.png" Rotation="180" IsVisible="{Binding DetailsShown}" VerticalOptions="Start" HorizontalOptions="End"/>
                                                     <StackLayout.GestureRecognizers>
-                                                            <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding BindingContext.OnShowTenantDetailsTapped,Source={x:Reference ThisPage}}"  CommandParameter="{Binding .}"  />
+                                                            <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding BindingContext.OnShowTenantDetailsTapped,Source={x:Reference ThisPage}}"  CommandParameter="{Binding .}"  Tapped="Handle_Tapped"/>
                                                     </StackLayout.GestureRecognizers>
                                                 </StackLayout>
                                             </StackLayout>
