--- a/ManageGo/Views/TransactionsPage.xaml
+++ b/ManageGo/Views/TransactionsPage.xaml
@@ -112,7 +112,7 @@
                                                     <Image  Source="chevron_down.png" Rotation="0" IsVisible="{Binding DetailsShown, Converter={StaticResource InverseBoolConverter} }" VerticalOptions="Start" HorizontalOptions="End"/>
                                                     <Image  Source="chevron_down.png" Rotation="180" IsVisible="{Binding DetailsShown}" VerticalOptions="Start" HorizontalOptions="End"/>
                                                     <StackLayout.GestureRecognizers>
-                                                            <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding BindingContext.OnShowDetailsTapped,Source={x:Reference ThisPage}}"  CommandParameter="{Binding .}"  />
+                                                            <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="Handle_Tapped" Command="{Binding BindingContext.OnShowDetailsTapped,Source={x:Reference ThisPage}}"  CommandParameter="{Binding .}"  />
                                                     </StackLayout.GestureRecognizers>
                                                 </StackLayout>
                                             </StackLayout>
@@ -124,11 +124,11 @@
                                                 <Label Text="{Binding BankTransactionNumber}" Margin="4,0,0,0" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
                                             </StackLayout>
                                             <StackLayout IsVisible="{Binding DetailsShown}" Padding="0,0,8,0" HorizontalOptions="FillAndExpand">
-                                                <StackLayout Orientation="Horizontal">
+                                                <StackLayout Orientation="Horizontal" Margin="0,8,0,0">
                                                     <Label Text="Buildings: " FontSize="Small" HorizontalOptions="Start" TextColor="{StaticResource Grey-Light-1}" />
-                                                    <Label Text="{Binding BuildingsCount}"  FontSize="Small" TextColor="{StaticResource Grey-Mid-2}" />
+                                                    <Label Text="{Binding BuildingsCount}" FontSize="Small" TextColor="{StaticResource Grey-Mid-2}" />
                                                 </StackLayout>
-                                                <Label Text="Payments: " FontSize="Small" HorizontalOptions="Start" TextColor="{StaticResource Grey-Light-1}" />
+                                                <Label Text="Payments: " Margin="0,8,0,8" FontSize="Small" HorizontalOptions="Start" TextColor="{StaticResource Grey-Light-1}" />
                                                 <!-- list transaction payments -->
                                                 <controls:NestedListView ItemsSource="{Binding Payments}" HeightRequest="{Binding PaymentsListHeight}" SelectionMode="None" SeparatorVisibility="None" HasUnevenRows="true" >
                                                     <ListView.ItemTemplate>
@@ -146,8 +146,8 @@
                                                                             </FormattedString>
                                                                         </Label.FormattedText>
                                                                     </Label>
-                                                                    <Label Text="{Binding ShortDescription}" VerticalOptions="Start" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}" />
-                                                                    <BoxView HeightRequest="1" Margin="0,8,0,8" HorizontalOptions="FillAndExpand" BackgroundColor="{StaticResource Grey-Light-1}" />
+                                                                    <Label Text="{Binding ShortDescription}" Margin="0,4,0,0" VerticalOptions="Start" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}" />
+                                                                    <BoxView HeightRequest="1" Margin="0,12,0,12" HorizontalOptions="FillAndExpand" BackgroundColor="{StaticResource Grey-Light-2}" />
                                                                 </StackLayout>
                                                             </ViewCell>
                                                         </DataTemplate>
@@ -167,7 +167,6 @@
                     BackgroundColor="Transparent" 
                     VerticalOptions="CenterAndExpand" 
                     HorizontalOptions="CenterAndExpand">
-               
             <StackLayout>
                 <ActivityIndicator Color="Gray" IsRunning="true" HorizontalOptions="Center" VerticalOptions="Center" />
                 <Label Text="Searching..." FontSize="Small" TextColor="Gray"/>
