* CalendarRenderer.cs: fixing the android calendar
* App.xaml.cs:
* CalendarView.cs:
* APIpaths.cs:
* DataAccess.cs:
* CustomEntry.cs:
* CalendarRenderer.cs:
* FeedbackPage.xaml:
* CalendarEvent.cs:
* SettingsPage.xaml:
* CalendarPage.xaml:
* MasterMenuPage.xaml:
* CalendarPage.xaml.cs:
* SettingsPage.xaml.cs:
* SignedInUserInfo.cs:
* CalendarViewPage.cs:
* CalendarMonthModel.cs:
* SettingsPageModel.cs:
* CalendarPageModel.cs:
* FeedbackPageModel.cs:
* MasterMenuPageModel.cs:
* CalendarMonthRenderer.cs:

--- a/ManageGo/Views/MasterMenuPage.xaml
+++ b/ManageGo/Views/MasterMenuPage.xaml
@@ -50,7 +50,7 @@
                 <BoxView />
                 <Grid Margin="0,0,4,0">
                     <Label Text="Calendar" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" FontAttributes="Bold" VerticalOptions="CenterAndExpand" />
-                    <Button Text="Calendar" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
+                    <Button Text="Calendar" Command="{Binding OnCalendarPageTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
                 </Grid>
                 <BoxView />
                 <Grid Margin="0,0,4,0">
@@ -66,7 +66,7 @@
                 <BoxView />
                 <Grid Margin="0,0,4,0">
                     <Label Text="Settings" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" FontAttributes="Bold" VerticalOptions="CenterAndExpand" />
-                    <Button Text="Settings" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
+                    <Button Text="Settings" Command="{Binding OnSettingsTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
                 </Grid>
                 <BoxView />
                 <Grid Margin="0,0,4,0">
