--- a/ManageGo/Views/CalendarPage.xaml
+++ b/ManageGo/Views/CalendarPage.xaml
@@ -7,7 +7,7 @@
              xmlns:local="clr-namespace:ManageGo"
               xmlns:controls="clr-namespace:ManageGo.Controls"
              x:Class="ManageGo.CalendarPage">
-    <RelativeLayout>
+    
         <Grid RowSpacing="0"
               RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,
                              Property=Height, Factor=1, Constant=0}"
@@ -32,43 +32,30 @@
                 <Label Text="Calendar" TextColor="{StaticResource Grey-Dark-1}"  FontAttributes="Bold" Margin="0,8,0,7" FontSize="Medium" HorizontalTextAlignment="Center"/>
                 <BoxView HeightRequest="1" BackgroundColor="#85bafa" />
             </StackLayout>
-            <StackLayout BackgroundColor="{StaticResource Grey-Light-2}" Grid.Row="2">
-                <controls:CalendarView  SelectedDate="{Binding SelectedDate}" HighlightedDates="{Binding HighlightedDates}"  />
-                <ListView ItemsSource="{Binding Buildings}" SelectionMode="None" HasUnevenRows="true" BackgroundColor="Transparent" SeparatorVisibility="None" Margin="22,18,22,18" CachingStrategy="RecycleElement">
+            
+            <Grid Grid.Row="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="0.75*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <controls:CalendarView Grid.Row="0" VerticalOptions="StartAndExpand"  SelectedDate="{Binding SelectedDate}" HighlightedDates="{Binding HighlightedDates}"  />
+              <ListView Grid.Row="1" ItemsSource="{Binding CalendarEvents}" SelectionMode="None" HasUnevenRows="true" BackgroundColor="Transparent" SeparatorVisibility="None" Margin="22,18,22,18" CachingStrategy="RecycleElement">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
                                 <Frame HasShadow="false" BackgroundColor="White" Margin="0,0,0,12" Padding="8">
                                     <StackLayout Orientation="Horizontal" Spacing="17">
-                                        <Image Source="building_grey.png" Margin="8,6,0,0" HorizontalOptions="Center" VerticalOptions="StartAndExpand"/>
+                                        <Image Source="calendar_blue.png" Margin="8,6,0,0" HorizontalOptions="Center" VerticalOptions="StartAndExpand"/>
                                         <StackLayout HorizontalOptions="FillAndExpand">
-                                            <Label Text="{Binding BuildingName}" FontSize="Medium" TextColor="{StaticResource Grey-Mid-1}" />
-                                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" />
-                                            <StackLayout Orientation="Horizontal" Spacing="4">
-                                                <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand" Spacing="2">
-                                                    <Label Text="Units:" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
-                                                    <Label Text="{Binding UnitCount, Converter={StaticResource PaddedStringConverter}}" TextColor="{StaticResource Primary}" FontSize="Small"/>
-                                                    <StackLayout.GestureRecognizers>
-                                                        <TapGestureRecognizer Command="{Binding BindingContext.OnUnitTapped,Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
-                                                    </StackLayout.GestureRecognizers>
-                                                </StackLayout>
-                                                <BoxView WidthRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" VerticalOptions="Fill"/>
-                                                <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand" Spacing="2">
-                                                    <Label Text="Tenants:" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
-                                                    <Label Text="{Binding TenantCount, Converter={StaticResource PaddedStringConverter}}" TextColor="{StaticResource Primary}" FontSize="Small"/>
-                                                    <StackLayout.GestureRecognizers>
-                                                        <TapGestureRecognizer Command="{Binding BindingContext.OnTenantTapped,Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
-                                                    </StackLayout.GestureRecognizers>
-                                                </StackLayout>
-                                                <BoxView WidthRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" VerticalOptions="Fill"/>
-                                                <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand" Spacing="2">
-                                                    <Label Text="Open tickets:" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
-                                                    <Label Text="{Binding OpenTicketCount, Converter={StaticResource PaddedStringConverter}}" TextColor="{StaticResource Primary}" FontSize="Small"/>
-                                                    <StackLayout.GestureRecognizers>
-                                                        <TapGestureRecognizer Command="{Binding BindingContext.OnTicketsTapped,Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
-                                                    </StackLayout.GestureRecognizers>
-                                                </StackLayout>
+                                            <StackLayout Orientation="Horizontal">
+                                                <Label Text="{Binding HeaderTime}" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}" />
+                                                <Label Text="-" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
+                                                <Label Text="{Binding HeaderDate}" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
                                             </StackLayout>
+                                            <Label Text="{Binding Title}" FontSize="Medium" FontAttributes="Bold" TextColor="{StaticResource Grey-Dark-1}" />
+                                            <Label Text="{Binding HeaderAddress}" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
+                                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" />
+                                           
                                         </StackLayout>
                                     </StackLayout>
                                 </Frame>
@@ -76,18 +63,30 @@
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
-            </StackLayout>
              <Frame IsVisible="{Binding IsLoading}" 
-                    Grid.Row="2" HasShadow="false" 
-                    BackgroundColor="#99000000" 
+                    Grid.Row="1" HasShadow="false" 
+                    BackgroundColor="Transparent" 
                     VerticalOptions="CenterAndExpand" 
                     HorizontalOptions="CenterAndExpand">
             <StackLayout>
-                <ActivityIndicator Color="White" IsRunning="true" HorizontalOptions="Center" VerticalOptions="Center" />
-                <Label Text="Searching..." TextColor="White"/>
+                <ActivityIndicator Color="Gray" IsRunning="true" HorizontalOptions="Center" VerticalOptions="Center" />
+                <Label Text="Searching..." TextColor="Gray"/>
             </StackLayout>
         </Frame>
+            <Frame IsVisible="{Binding DateHasNoEvents}" 
+                    Grid.Row="1" HasShadow="false" 
+                    BackgroundColor="Transparent" 
+                    VerticalOptions="CenterAndExpand" 
+                    HorizontalOptions="CenterAndExpand">
+                <StackLayout>
+                    <Label Text="Nothing to see here" FontSize="Small" HorizontalTextAlignment="Center" TextColor="Gray"/>
+                    <Label Text="Select a highlighted date" FontSize="Small" HorizontalTextAlignment="Center" TextColor="Gray"/>
+                </StackLayout>
+            </Frame>
+            </Grid>
+            
+            
         </Grid>
        
-    </RelativeLayout>
+ 
 </ContentPage>
